--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.17.1",
     "react-native-maps": "^0.26.1",
+    "redis": "^3.0.2",
+    "request": "^2.88.2",
     "yarn": "^1.21.1"
   },
   "devDependencies": {
